syntax = "proto3";

option csharp_namespace = "GrpcUserResponse";

import "Protos/Users/Models/UserModel.proto";

package UserResponse;

message GetUsersResponse {
  repeated UserModel.User users = 1;
  int32 total = 2;
}

message GetUserResponse {
  UserModel.User user = 1;
}

message CreateUserResponse {
  UserModel.User user = 1;
}

message UpdateUserResponse {
  UserModel.User user = 1;
}

message DeleteUserResponse {
  UserModel.User user = 1;
}